--- a/app/src/main/res/layout/item_folder.xml
+++ b/app/src/main/res/layout/item_folder.xml
@@ -4,10 +4,11 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <ImageView
+    <ImageButton
         android:id="@+id/iv_folder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/toggleiv_background_selector"
         app:srcCompat="@drawable/ic_folder_black_24dp"
         />
 
